Fix: Prevent line break in 'Buy Me a Coffee' link on iPhone

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300; /* Light */
@@ -73,4 +72,8 @@ body {
   color: white;
   font-size: 1.2rem;
   text-align: center;
+}
+
+.no-wrap {
+  white-space: nowrap;
 }
